sumo/tests/duarouter/flows/errors/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalPos' in definition of flow '0' is empty.
Error: Invalid arrivalPos definition for flow '0';
 must be one of ("random", "max", or a float)
Quitting (on error).
